refactoring gradle to mvn convert